// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select rendering should initially render correctly 1`] = `
<Select
  className="someClass"
  itemToString={[Function]}
  items={
    Array [
      Object {
        "name": "Sun",
      },
      Object {
        "name": "Moon",
      },
      Object {
        "name": "Mercury",
      },
      Object {
        "name": "Venus",
      },
      Object {
        "name": "Earth",
      },
      Object {
        "name": "Mars",
      },
      Object {
        "name": "Jupiter",
      },
      Object {
        "name": "Saturn",
      },
      Object {
        "name": "Neptune",
      },
      Object {
        "disabled": true,
        "name": "Pluto",
      },
    ]
  }
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onClear={[MockFunction]}
  onFocus={[MockFunction]}
  selectedItem={
    Object {
      "name": "Moon",
    }
  }
>
  <SelectBase
    blurredRenderer={[Function]}
    className="someClass"
    clearTitle=""
    focusedRenderer={[Function]}
    inputRef={
      Object {
        "current": undefined,
      }
    }
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onClearAllSelected={[MockFunction]}
    onFocus={[MockFunction]}
    onSelectionAdd={[MockFunction]}
    showArrow={true}
    showClearButton={true}
    suggestionToString={[Function]}
    suggestions={
      Array [
        Object {
          "name": "Sun",
        },
        Object {
          "name": "Moon",
        },
        Object {
          "name": "Mercury",
        },
        Object {
          "name": "Venus",
        },
        Object {
          "name": "Earth",
        },
        Object {
          "name": "Mars",
        },
        Object {
          "name": "Jupiter",
        },
        Object {
          "name": "Saturn",
        },
        Object {
          "name": "Neptune",
        },
        Object {
          "disabled": true,
          "name": "Pluto",
        },
      ]
    }
  >
    <div
      className="SelectBase someClass"
    >
      <Downshift
        defaultHighlightedIndex={0}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue=""
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          aria-owns={null}
          className="SelectBase__main"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearTooltipLabel=""
            isArrowUp={false}
            isFocused={false}
            onArrowClick={[Function]}
            onClear={[Function]}
            onClick={[Function]}
            showArrow={true}
            showClearButton={true}
          >
            <div
              className="FieldWrapper SelectBase__field"
              onClick={[Function]}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  aria-activedescendant={null}
                  aria-autocomplete="list"
                  aria-controls={null}
                  aria-labelledby="downshift-0-label"
                  autoComplete="off"
                  className="Select__wrapper"
                  id="downshift-0-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="searchbox"
                  tabIndex={0}
                  value=""
                >
                  <span
                    className="Select__selected"
                  >
                    Moon
                  </span>
                </div>
                <List
                  aria-labelledby="downshift-0-label"
                  id="downshift-0-menu"
                  isControlledNavigation={true}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-0-label"
                    className="List"
                    id="downshift-0-menu"
                    role="listbox"
                  />
                </List>
              </div>
              <Button
                className="FieldWrapper__clearButton FieldWrapper__clearButton--rightIndent"
                isInline={true}
                isLink={true}
                onClick={[Function]}
                title=""
              >
                <button
                  className="Button Button--isLink Button--isInline FieldWrapper__clearButton FieldWrapper__clearButton--rightIndent"
                  disabled={false}
                  onClick={[Function]}
                  title=""
                  type="button"
                >
                  <MdClear
                    size={16}
                  >
                    <IconBase
                      attr={
                        Object {
                          "viewBox": "0 0 24 24",
                        }
                      }
                      size={16}
                    >
                      <svg
                        fill="currentColor"
                        height={16}
                        size={16}
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 24 24"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          key="0"
                        />
                      </svg>
                    </IconBase>
                  </MdClear>
                </button>
              </Button>
              <IoMdArrowDropdown
                className="FieldWrapper__dropdownIcon"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                <IconBase
                  attr={
                    Object {
                      "viewBox": "0 0 512 512",
                    }
                  }
                  className="FieldWrapper__dropdownIcon"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    className="FieldWrapper__dropdownIcon"
                    fill="currentColor"
                    height="1em"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    tabIndex={0}
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M128 192l128 128 128-128z"
                      key="0"
                    />
                  </svg>
                </IconBase>
              </IoMdArrowDropdown>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</Select>
`;

exports[`Select rendering should render focused component correctly 1`] = `
<Select
  className="someClass"
  itemToString={[Function]}
  items={
    Array [
      Object {
        "name": "Sun",
      },
      Object {
        "name": "Moon",
      },
      Object {
        "name": "Mercury",
      },
      Object {
        "name": "Venus",
      },
      Object {
        "name": "Earth",
      },
      Object {
        "name": "Mars",
      },
      Object {
        "name": "Jupiter",
      },
      Object {
        "name": "Saturn",
      },
      Object {
        "name": "Neptune",
      },
      Object {
        "disabled": true,
        "name": "Pluto",
      },
    ]
  }
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onClear={[MockFunction]}
  onFocus={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  selectedItem={
    Object {
      "name": "Moon",
    }
  }
>
  <SelectBase
    blurredRenderer={[Function]}
    className="someClass"
    clearTitle=""
    focusedRenderer={[Function]}
    inputRef={
      Object {
        "current": <div
          aria-haspopup="true"
          aria-label="close menu"
          class="Select__wrapper Select__wrapper--isOpen"
          data-toggle="true"
          role="button"
          tabindex="0"
          type="button"
        >
          <span
            class="Select__selected"
          >
            Moon
          </span>
        </div>,
      }
    }
    listRenderer={[Function]}
    onBlur={[MockFunction]}
    onClearAllSelected={[MockFunction]}
    onFocus={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    onSelectionAdd={[MockFunction]}
    showArrow={true}
    showClearButton={true}
    suggestionToString={[Function]}
    suggestions={
      Array [
        Object {
          "name": "Sun",
        },
        Object {
          "name": "Moon",
        },
        Object {
          "name": "Mercury",
        },
        Object {
          "name": "Venus",
        },
        Object {
          "name": "Earth",
        },
        Object {
          "name": "Mars",
        },
        Object {
          "name": "Jupiter",
        },
        Object {
          "name": "Saturn",
        },
        Object {
          "name": "Neptune",
        },
        Object {
          "disabled": true,
          "name": "Pluto",
        },
      ]
    }
  >
    <div
      className="SelectBase someClass"
    >
      <Downshift
        defaultHighlightedIndex={0}
        defaultIsOpen={false}
        environment={[Window]}
        getA11yStatusMessage={[Function]}
        inputValue=""
        itemToString={[Function]}
        onChange={[Function]}
        onInputValueChange={[Function]}
        onOuterClick={[Function]}
        onSelect={[Function]}
        onStateChange={[Function]}
        onUserAction={[Function]}
        scrollIntoView={[Function]}
        selectedItemChanged={[Function]}
        stateReducer={[Function]}
        suppressRefError={false}
      >
        <div
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-labelledby="downshift-1-label"
          aria-owns="downshift-1-menu"
          className="SelectBase__main SelectBase__main--focused"
          role="combobox"
        >
          <FieldWrapper
            className="SelectBase__field"
            clearTooltipLabel=""
            isArrowUp={true}
            isFocused={true}
            onArrowClick={[Function]}
            onClear={[Function]}
            onClick={[Function]}
            showArrow={true}
            showClearButton={false}
          >
            <div
              className="FieldWrapper FieldWrapper--isFocused SelectBase__field"
              onClick={[Function]}
            >
              <div
                className="FieldWrapper__content"
              >
                <div
                  aria-haspopup={true}
                  aria-label="close menu"
                  className="Select__wrapper Select__wrapper--isOpen"
                  data-toggle={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  role="button"
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="Select__selected"
                  >
                    Moon
                  </span>
                </div>
                <List
                  aria-labelledby="downshift-1-label"
                  className="SelectBase__list--focused"
                  id="downshift-1-menu"
                  isControlledNavigation={true}
                  role="listbox"
                >
                  <ul
                    aria-labelledby="downshift-1-label"
                    className="List SelectBase__list--focused"
                    id="downshift-1-menu"
                    role="listbox"
                  >
                    <SuggestionsList
                      className="List__item"
                      getItemProps={[Function]}
                      highlightedIndex={0}
                      inputValue=""
                      key=".0"
                      passDisabledToListItems={true}
                      suggestionToString={[Function]}
                      suggestions={
                        Array [
                          Object {
                            "name": "Sun",
                          },
                          Object {
                            "name": "Moon",
                          },
                          Object {
                            "name": "Mercury",
                          },
                          Object {
                            "name": "Venus",
                          },
                          Object {
                            "name": "Earth",
                          },
                          Object {
                            "name": "Mars",
                          },
                          Object {
                            "name": "Jupiter",
                          },
                          Object {
                            "name": "Saturn",
                          },
                          Object {
                            "name": "Neptune",
                          },
                          Object {
                            "disabled": true,
                            "name": "Pluto",
                          },
                        ]
                      }
                    >
                      <ListItem
                        aria-selected={true}
                        disabled={false}
                        id="downshift-1-item-0"
                        isHighlighted={true}
                        key="Sun"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={true}
                          className="ListItem ListItem--isHighlighted ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-0"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Sun
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-1"
                        isHighlighted={false}
                        key="Moon"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-1"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Moon
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-2"
                        isHighlighted={false}
                        key="Mercury"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-2"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Mercury
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-3"
                        isHighlighted={false}
                        key="Venus"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-3"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Venus
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-4"
                        isHighlighted={false}
                        key="Earth"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-4"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Earth
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-5"
                        isHighlighted={false}
                        key="Mars"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-5"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Mars
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-6"
                        isHighlighted={false}
                        key="Jupiter"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-6"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Jupiter
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-7"
                        isHighlighted={false}
                        key="Saturn"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-7"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Saturn
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={false}
                        id="downshift-1-item-8"
                        isHighlighted={false}
                        key="Neptune"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseMove={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--clickable"
                          disabled={false}
                          id="downshift-1-item-8"
                          onClick={[Function]}
                          onMouseDown={[Function]}
                          onMouseMove={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Neptune
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                      <ListItem
                        aria-selected={false}
                        disabled={true}
                        id="downshift-1-item-9"
                        isHighlighted={false}
                        key="Pluto"
                        onMouseDown={[Function]}
                        passDisabledToLi={true}
                        role="option"
                        style={Object {}}
                      >
                        <li
                          aria-selected={false}
                          className="ListItem ListItem--disabled"
                          disabled={true}
                          id="downshift-1-item-9"
                          onMouseDown={[Function]}
                          role="option"
                          style={Object {}}
                        >
                          <MarkedText
                            inline={true}
                            key=".0"
                            marker=""
                          >
                            <Text
                              inline={true}
                            >
                              <span>
                                Pluto
                              </span>
                            </Text>
                          </MarkedText>
                        </li>
                      </ListItem>
                    </SuggestionsList>
                  </ul>
                </List>
              </div>
              <IoMdArrowDropup
                className="FieldWrapper__dropdownIcon"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                <IconBase
                  attr={
                    Object {
                      "viewBox": "0 0 512 512",
                    }
                  }
                  className="FieldWrapper__dropdownIcon"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    className="FieldWrapper__dropdownIcon"
                    fill="currentColor"
                    height="1em"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="button"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    tabIndex={0}
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M128 320l128-128 128 128z"
                      key="0"
                    />
                  </svg>
                </IconBase>
              </IoMdArrowDropup>
            </div>
          </FieldWrapper>
        </div>
      </Downshift>
    </div>
  </SelectBase>
</Select>
`;
